Correccion de index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img class="title__profile" src="assets/perfil_peeta.jpeg" alt="Perfil de Guadalupe Alonso">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Guadalupe Alonso y construyo páginas web.</h2>
-                <h3 class="title__subsection">Soy formada en el Instituto Politécnico Nacional como Ingeniera Mecatrónica. Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</h3>
+                <h3 class="title__subsection">Soy formada en el Instituto Politécnico Nacional como Ingeniera Mecatrónica. Actualmente estoy participando en el programa Oracle Next Education (ONE) con Alura Latam.</h3>
                 <ul class="title__network">
                     <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/galonsoc/"><i class="bi bi-linkedin"></i></a></li>
@@ -74,7 +74,7 @@
             <p class="about__paragraph">Soy una estudiante de ingeniería apasionada por la innovación y el desarrollo tecnológico. 
                 Mi capacidad para trabajar en equipo se destaca en mi habilidad para colaborar eficazmente con otros.
                 Además, tengo una notable facilidad para el aprendizaje, lo que me permite adaptarme rápidamente a nuevas tecnologías y métodos de trabajo, siempre buscando mejorar mis habilidades y conocimientos. 
-                Estoy comprometido con el desarrollo personal y profesional, esforzándome por alcanzar la excelencia en todo lo que hago.</p>
+                Estoy comprometida con el desarrollo personal y profesional, esforzándome por alcanzar la excelencia en todo lo que hago.</p>
         </div>
     </section>
 
